--- a/src/general.scss
+++ b/src/general.scss
@@ -1,1 +1,58 @@
-@import '~normalize.css';
+@import "~normalize.css";
+@import "./styles/main.scss";
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+
+  :visited {
+    color: inherit;
+  }
+}
+
+ul {
+  list-style-type: none;
+}
+
+.App {
+  background-image: url('./accets/background.png');;
+}
+
+.container {
+  max-width: 900px;
+  min-width: 400px;
+  height: 99.5vh;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  //border: 1px solid white;
+}
+
+.main-picture {
+  height: 100%;
+  width: 100%;
+  display: block;
+  margin: auto;
+  object-fit: cover;
+}
+
+.expand-more {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  z-index: 25;
+  cursor: pointer;
+}
+
+.expand-less {
+  position: absolute;
+  top: 30px;
+  right: 10px;
+  z-index: 25;
+  cursor: pointer;
+}
