--- a/src/components/courses/styles.scss
+++ b/src/components/courses/styles.scss
@@ -245,7 +245,7 @@
   list-style: disc;
   padding: 32px;
   padding-right: 0px;
-  background-color: rgba($color: #000000, $alpha: .8);
+  background-color: rgba($color: #000000, $alpha: .9);
   letter-spacing: $letter-spacing;
 
   @media (min-width: 650px) {
@@ -267,8 +267,10 @@
   opacity: 0;
   position: absolute;
   top: 20px;
-  left: 10%;
-  width: 80%;
+  // left: 10%;
+  // width: 80%;
+  left: 0%;
+  width: 73%;
   animation: appearTags 3s linear;
   animation-delay: 1s;
   animation-fill-mode: forwards;
@@ -346,9 +348,6 @@
   0% {
     opacity: 1;
   }
-  // 90% {
-  //   opacity: 1;
-  // }
   95% {
     opacity: 1;
   }
