--- a/src/components/interests/styles.scss
+++ b/src/components/interests/styles.scss
@@ -21,7 +21,7 @@
   left: 0;
   right: 0;
   animation: disAppear3S1Img 8s linear;
-  z-index: 13;
+  z-index: 12;
 }
 
 .third-slide-second-picture {
@@ -34,7 +34,7 @@
   right: 0;
   animation: appear3S2Img 6.5s linear;
   z-index: 15;
-  opacity: 5;
+  opacity: 1;
 }
 
 .dog-container {
@@ -79,35 +79,48 @@
 
 .jacket-container {
   position: absolute;
-  left: -30%;
-  height: 567px;
-  width: 576px;
-  z-index: 15;
+  left: -33%;
+  z-index: 18;
   animation: jacketUp 9s ease-in;
   animation-fill-mode: jacketUp;
+   //top: 164px;
+  height: 619px;
+  width: 564px;
 
   @media (min-width: 512px) {
-    left: -28%;
+    left: -32%;
   }
 
   @media (min-width: 525px) {
-    left: -26%;
+    left: -28%;
+  }
+
+  @media (min-width: 543px) {
+    left: -24%;
   }
 
   @media (min-width: 555px) {
-    left: -22%;
+    left: -24%;
   }
 
-  @media (min-width: 578px) {
+  @media (min-width: 573px) {
     left: -20%;
   }
 
   @media (min-width: 600px) {
+    left: -19%;
+  }
+
+  @media (min-width: 610px) {
     left: -17%;
   }
 
   @media (min-width: 625px) {
-    left: -14%;
+    left: -15%;
+  }
+
+  @media (min-width: 643px) {
+    left: -15%;
   }
 
   @media (min-width: 655px) {
@@ -115,11 +128,11 @@
   }
 
   @media (min-width: 675px) {
-    left: -9%;
+    left: -11%;
   }
 
   @media (min-width: 698px) {
-    left: -8%;
+    left: -9%;
   }
 
   @media (min-width: 723px) {
@@ -127,7 +140,11 @@
   }
 
   @media (min-width: 745px) {
-    left: -4%;
+    left: -5%;
+  }
+
+  @media (min-width: 769px) {
+    left: -3%;
   }
 
   @media (min-width: 778px) {
@@ -147,22 +164,19 @@
   }
 
   @media (min-width: 868px) {
-    left: 5%;
+    left: 4%;
   }
 }
 
 .gif-container {
   position: absolute;
-  left: 34%;
-  top: 220px;
-  height: 425px;
-  width: 191px;
+  left: 36%;
+  top: 235px;
+  height: 375px;
+  width: 179px;
+  opacity: 1;
 
   @media (min-width: 530px) {
-    left: 35%;
-  }
-
-  @media (min-width: 550px) {
     left: 36%;
   }
 
@@ -171,6 +185,10 @@
   }
 
   @media (min-width: 585px) {
+    left: 38%;
+  }
+
+  @media (min-width: 650px) {
     left: 39%;
   }
 
@@ -178,32 +196,28 @@
     left: 40%;
   }
 
-  @media (min-width: 762px) {
-    left: 41%;
+  @media (min-width: 820px) {
+    left: 345px;
   }
 
   @media (min-width: 840px) {
-    left: 350px;
+    left: 349px;
   }
 
   @media (min-width: 855px) {
-    left: 356px;
+    left: 357px;
   }
 
   @media (min-width: 863px) {
-    left: 361px;
-  }
-
-  @media (min-width: 873px) {
     left: 366px;
   }
 
-  @media (min-width: 883px) {
-    left: 372px;
+  @media (min-width: 873px) {
+    left: 370px;
   }
 
   @media (min-width: 898px) {
-    left: 376px;
+    left: 377px;
   }
 }
 
@@ -217,13 +231,11 @@
     top: 700px;
   }
   50% {
-    top: 198px;
-  }
-  98% {
-    opacity: 1;
+    top: 164px;
   }
   100% {
-    top: 198px;
+    top: 164px;
+    //opacity: 1;
   }
 }
 
@@ -250,7 +262,7 @@
     opacity: 1;
   }
   100% {
-    opacity: 0;
+    opacity: .8;
   }
 }
 
