--- a/src/components/title/styles.scss
+++ b/src/components/title/styles.scss
@@ -1,25 +1,37 @@
 @import "styles/variables.scss";
 
-// .title-container {
-//   display: none;
-// }
+.title-container{
+  position: absolute;
+  z-index: 20;
+  width: 279px;
+  top: 30px;
+  right: -41px;
+}
 
 .title {
   color: $base__color;
   text-align: end;
-  right: 50px;
-  position: absolute;
-  font-size: $title__font-size;
+  margin: 0;
+  font-size: $main__title__font-size;
   font-family: $title__font-family;
   text-shadow: $second__color 1px 1px 1px;
+
+  .slide-name & {
+    font-size: $title__slide__font-size;
+  }
 }
 
 .sub-title {
   color: $second__color;
   font-size: $profesion__title__font-size;
-  top: 67px;
-  right: 50px;
-  position: absolute;
+  top: 57px;
+  text-align: end;
   font-family: $title__font-family;
   text-shadow: $base__color 1px 1px 2px;
+}
+
+.slide-name {
+  position: absolute;
+  top: -21px;
+  right: -20px;
 }
