--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,16 @@
 @import "./font-family.scss";
 
 $base__font-size: 18px;
-$base__font-family: 'MainFont' !important;
-$base__color: #c1314a;
+$base__font-family: 'ColoredCrayons' !important;
+$title__font-family: 'PWD' !important;
 
+// $base__color: #c1314a;
+$base__color: #b31c35;
 $second__color: #d8cccc;
-$courses__fonts__color: #c25164;
-$title__font-size: 35px;
-$title__font-family: 'OpenSansBI' !important;
+$courses__fonts__color: #d45a6e;
+
+$main__title__font-size: 35px;
 $profesion__title__font-size: 22px;
 $letter-spacing: .2rem;
 $contacts_fonts: 12px;
+$title__slide__font-size: 14px;
