--- a/src/components/title/styles.scss
+++ b/src/components/title/styles.scss
@@ -4,7 +4,7 @@
   position: absolute;
   z-index: 20;
   width: 279px;
-  top: 30px;
+  top: 0;
   right: -41px;
 }
 
@@ -33,5 +33,5 @@
 .slide-name {
   position: absolute;
   top: -21px;
-  right: -20px;
+  left: -26px;
 }
