--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -2,18 +2,19 @@
 
 .header-container {
   position: absolute;
-  top: 0;
-  right:-30px;
-  z-index: 20;
-}
+  top: 30px;
+  right: 50px;
 
+  @media (min-width: '600px') {
+    right: 100px;
+  }
+}
 
 .flag {
   position: absolute;
-  top: 101px;
-  right: -37px;
-  //width: 180px;
-  border: 30px solid $courses__fonts__color;
-  //border-top: 27px;
+  top: 68px;
+  right: -40px;
+  border: 33px solid $courses__fonts__color;
   border-bottom: 20px solid transparent;
+  z-index: 20;
 }
