--- a/src/components/interests/styles.scss
+++ b/src/components/interests/styles.scss
@@ -1,117 +1,138 @@
 @import "styles/variables.scss";
 
-.dog,
-.jacket {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
 .third-slide-first-picture {
   height: 100%;
   width: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   animation: disAppear3S1Img 8s linear;
-  z-index: 12;
 }
 
 .third-slide-second-picture {
   height: 100%;
   width: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  animation: appear3S2Img 6.5s linear;
-  z-index: 15;
-  opacity: 1;
+  animation: appear3S2Img 4.5s linear;
 }
 
-.dog-container {
+.dog-img-container {
   position: absolute;
-  left: 41%;
-  //top: 220px;
+  left: 34%;
   height: 476px;
   width: 200px;
   z-index: 56;
-  animation: dogUp 7s ease-in;
-  animation-delay: 1s;
-  animation-fill-mode: dogUp;
+  animation: dogUp 6s ease-in;
+  animation-fill-mode: forwards;
 
-  // @media (min-width: 589px) {
-  //   //left: 37%;
-  // }
-
-  // @media (min-width: 610px) {
-  //   //left: 37%;
-  // }
-
-  // @media (min-width: 635px) {
-  //   //left: 38%;
-  // }
-
-  // @media (min-width: 667px) {
-  //   //left: 39%;
-  // }
-
-  // @media (min-width: 740px) {
-  //   //left: 40%;
-  // }
-
-  // @media (min-width: 825px) {
-  //   //left: 41%;
-  // }
-
-  // @media (min-width: 868px) {
-  //   //left: 41%;
-  // }
-}
-
-.jacket-container {
-  position: absolute;
-  left: -33%;
-  z-index: 18;
-  animation: jacketUp 9s ease-in;
-  animation-fill-mode: jacketUp;
-   //top: 164px;
-  height: 619px;
-  width: 564px;
-
-  @media (min-width: 512px) {
-    left: -32%;
+  @media (min-width: 564px) {
+    left: 35%;
   }
 
-  @media (min-width: 525px) {
+  @media (min-width: 593px) {
+    left: 36%;
+  }
+
+  @media (min-width: 635px) {
+    left: 38%;
+  }
+
+  @media (min-width: 667px) {
+    left: 39%;
+  }
+
+  @media (min-width: 809px) {
+    left: 40%;
+  }
+
+  @media (min-width: 878px) {
+    left: 41%;
+  }
+
+  @media (min-width: 1000px) {
+    left: 42%;
+  }
+
+  @media (min-width: 1120px) {
+    left: 43%;
+  }
+
+  @media (min-width: 1137px) {
+    left: 44%;
+  }
+
+  @media (min-width: 1270px) {
+    left: 43%;
+    height: 475px;
+    width: 228px;
+    animation: dogUp1270px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1330px) {
+    animation: dogUp1330px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1365px) {
+    left: 44%;
+    height: 475px;
+    width: 228px;
+    animation: dogUp1365px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1400px) {
+    left: 44%;
+    height: 540px;
+    animation: dogUp1400px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1450px) {
+    animation: dogUp1450px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1490px) {
+    animation: dogUp1490px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1520px) {
+    animation: dogUp1520px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1555px) {
+    height: 576px;
+    animation: dogUp1555px 5s linear;
+    animation-fill-mode: forwards;
+  }
+}
+
+.jacket-img-container {
+  position: absolute;
+  left: -30%;
+  height: 625px;
+  width: 577px;
+  z-index: 18;
+  animation: jacketUp 6s ease-in;
+  animation-fill-mode: forwards;
+
+  @media (min-width: 512px) {
     left: -28%;
   }
 
-  @media (min-width: 543px) {
-    left: -24%;
+  @media (min-width: 525px) {
+    left: -25%;
   }
 
-  @media (min-width: 555px) {
-    left: -24%;
+  @media (min-width: 543px) {
+    left: -21%;
   }
 
   @media (min-width: 573px) {
-    left: -20%;
+    left: -29%;
   }
 
   @media (min-width: 600px) {
-    left: -19%;
-  }
-
-  @media (min-width: 610px) {
     left: -17%;
   }
 
@@ -119,8 +140,12 @@
     left: -15%;
   }
 
+  @media (min-width: 625px) {
+    left: -14%;
+  }
+
   @media (min-width: 643px) {
-    left: -15%;
+    left: -13%;
   }
 
   @media (min-width: 655px) {
@@ -128,22 +153,18 @@
   }
 
   @media (min-width: 675px) {
-    left: -11%;
+    left: -8%;
   }
 
-  @media (min-width: 698px) {
-    left: -9%;
-  }
-
-  @media (min-width: 723px) {
+  @media (min-width: 710px) {
     left: -6%;
   }
 
-  @media (min-width: 745px) {
-    left: -5%;
+  @media (min-width: 734px) {
+    left: -4%;
   }
 
-  @media (min-width: 769px) {
+  @media (min-width: 763px) {
     left: -3%;
   }
 
@@ -159,22 +180,143 @@
     left: 0;
   }
 
-  @media (min-width: 840px) {
+  @media (min-width: 832px) {
     left: 2%;
   }
 
-  @media (min-width: 868px) {
+  @media (min-width: 857px) {
     left: 4%;
   }
+
+  @media (min-width: 892px) {
+    left: 5%;
+  }
+
+  @media (min-width: 913px) {
+    left: 6%;
+  }
+
+  @media (min-width: 933px) {
+    left: 7%;
+  }
+
+  @media (min-width: 958px) {
+    left: 8%;
+  }
+
+  @media (min-width: 984px) {
+    left: 9%;
+  }
+
+  @media (min-width: 1005px) {
+    left: 10%;
+  }
+
+  @media (min-width: 1030px) {
+    left: 11%;
+  }
+
+  @media (min-width: 1059px) {
+    left: 12%;
+  }
+
+  @media (min-width: 1084px) {
+    left: 13%;
+  }
+
+  @media (min-width: 1110px) {
+    left: 14%;
+  }
+
+  @media (min-width: 1140px) {
+    left: 15%;
+  }
+
+  @media (min-width: 1175px) {
+    left: 16%;
+  }
+
+  @media (min-width: 1215px) {
+    left: 17%;
+  }
+
+  @media (min-width: 1265px) {
+    animation: jacketUp1265px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1313px) {
+    left: 16.5%;
+    width: 605px;
+  }
+
+  @media (min-width: 1337px) {
+    left: 16.5%;
+    width: 614px;
+  }
+
+  @media (min-width: 1355px) {
+    left: 17%;
+    width: 612px;
+    animation: jacketUp1355px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1390px) {
+    width: 631px;
+  }
+
+  @media (min-width: 1400px) {
+    width: 631px;
+    animation: jacketUp1400px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1430px) {
+    width: 645px;
+    animation: jacketUp1430px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1470px) {
+    width: 662px;
+    animation: jacketUp1470px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+
+  @media (min-width: 1500px) {
+    width: 673px;
+  }
+
+  @media (min-width: 1530px) {
+    width: 689px;
+  }
+
+  @media (min-width: 1550px) {
+    width: 700px;
+    animation: jacketUp1550px 6s ease-in;
+    animation-fill-mode: forwards;
+  }
+}
+
+.dog-img,
+.jacket-img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .gif-container {
   position: absolute;
   left: 36%;
-  top: 235px;
-  height: 375px;
-  width: 179px;
-  opacity: 1;
+  top: 236px;
+  height: 378px;
+  width: 182px;
 
   @media (min-width: 530px) {
     left: 36%;
@@ -196,28 +338,110 @@
     left: 40%;
   }
 
+  @media (min-width: 774px) {
+    left: 41%;
+  }
+
   @media (min-width: 820px) {
     left: 345px;
+    left: 42%;
   }
 
-  @media (min-width: 840px) {
-    left: 349px;
+  @media (min-width: 920px) {
+    left: 345px;
+    left: 43%;
   }
 
-  @media (min-width: 855px) {
-    left: 357px;
+  @media (min-width: 1055px) {
+    left: 345px;
+    left: 43.5%;
   }
 
-  @media (min-width: 863px) {
-    left: 366px;
+  @media (min-width: 1120px) {
+    left: 345px;
+    left: 44%;
   }
 
-  @media (min-width: 873px) {
-    left: 370px;
+  @media (min-width: 1230px) {
+    left: 345px;
+    left: 44.5%;
   }
 
-  @media (min-width: 898px) {
-    left: 377px;
+  @media (min-width: 1260px) {
+    left: 44%;
+    top: 224px;
+    height: 401px;
+    width: 187px;
+  }
+
+  @media (min-width: 1280px) {
+    left: 44%;
+    top: 214px;
+    height: 419px;
+    width: 199px;
+  }
+
+  @media (min-width: 1300px) {
+    left: 44%;
+    top: 204px;
+    height: 430px;
+    width: 201px;
+  }
+
+  @media (min-width: 1325px) {
+    left: 44%;
+    top: 186px;
+    height: 430px;
+    width: 208px;
+  }
+
+  @media (min-width: 1360px) {
+    left: 44%;
+    top: 173px;
+    height: 430px;
+    width: 216px;
+  }
+
+  @media (min-width: 1400px) {
+    left: 44%;
+    top: 156px;
+    height: 430px;
+    width: 216px;
+  }
+
+  @media (min-width: 1450px) {
+    left: 44%;
+    top: 148px;
+    height: 450px;
+    width: 225px;
+  }
+
+  @media (min-width: 1490px) {
+    left: 44%;
+    top: 136px;
+    height: 475px;
+    width: 239px;
+  }
+
+  @media (min-width: 1510px) {
+    left: 44%;
+    top: 125px;
+    height: 493px;
+    width: 239px;
+  }
+
+  @media (min-width: 1535px) {
+    left: 44%;
+    top: 112px;
+    height: 503px;
+    width: 239px;
+  }
+
+  @media (min-width: 1560px) {
+    left: 44%;
+    top: 112px;
+    height: 503px;
+    width: 239px;
   }
 }
 
@@ -228,36 +452,152 @@
 
 @keyframes jacketUp {
   0% {
-    top: 700px;
+    top: 600px;
   }
   50% {
     top: 164px;
   }
+}
+
+@keyframes jacketUp1265px {
+  0% {
+    top: 600px;
+  }
+  50% {
+    top: 152px;
+  }
+}
+
+@keyframes jacketUp1355px {
+  0% {
+    top: 600px;
+  }
+  50% {
+    top: 140px;
+  }
+}
+
+@keyframes jacketUp1400px {
+  0% {
+    top: 600px;
+  }
+  50% {
+    top: 130px;
+  }
+}
+
+@keyframes jacketUp1430px {
+  0% {
+    top: 600px;
+  }
+  50% {
+    top: 120px;
+  }
+}
+
+@keyframes jacketUp1470px {
+  0% {
+    top: 600px;
+  }
+  50% {
+    top: 112px;
+  }
+}
+
+@keyframes jacketUp1550px {
+  0% {
+    top: 600px;
+  }
+  50% {
+    top: 115px;
+  }
   100% {
-    top: 164px;
-    //opacity: 1;
+    top: 115px;
   }
 }
 
 @keyframes dogUp {
   0% {
+    top: 500px;
+  }
+  50% {
+    top: 230px;
+  }
+}
+
+@keyframes dogUp1270px {
+  0% {
+    top: 500px;
+  }
+  50% {
+    top: 205px;
+  }
+}
+
+@keyframes dogUp1330px {
+  0% {
+    top: 500px;
+  }
+  50% {
+    top: 200px;
+  }
+}
+
+@keyframes dogUp1365px {
+  0% {
+    top: 500px;
+  }
+  50% {
+    top: 180px;
+  }
+}
+
+@keyframes dogUp1400px {
+  0% {
+    top: 500px;
+  }
+  50% {
+    top: 157px;
+  }
+}
+
+@keyframes dogUp1450px {
+  0% {
     top: 800px;
   }
   50% {
-    top: 220px;
+    top: 147px;
   }
-  100% {
-    top: 220px;
+}
+
+@keyframes dogUp1490px {
+  0% {
+    top: 800px;
+  }
+  50% {
+    top: 137px;
+  }
+}
+
+@keyframes dogUp1520px {
+  0% {
+    top: 800px;
+  }
+  50% {
+    top: 100px;
+  }
+}
+
+@keyframes dogUp1555px {
+  0% {
+    top: 800px;
+  }
+  50% {
+    top: 90px;
   }
 }
 
 @keyframes disAppear3S1Img {
-  0% {
-   // opacity: 1;
-  }
-  // 90% {
-  //   opacity: 1;
-  // }
   99% {
     opacity: 1;
   }
