--- a/src/general.scss
+++ b/src/general.scss
@@ -1,10 +1,6 @@
 @import "~normalize.css";
 @import "./styles/main.scss";
 
-body {
-
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -24,50 +20,11 @@ ul {
 }
 
 .App {
-  background-image: url("./accets/background.png");
-  overflow: hidden;
-}
+  display: none;
 
-.container {
-  max-width: 900px;
-  // min-width: 400px;
-  height: 99.5vh;
-  margin: 0 auto;
-  position: relative;
-  border: 1px solid white;
-  //overflow: hidden;
-  // -moz-transform: scale(0.8, 0.8); /* Moz-browsers */
-  // zoom: 0.8; /* Other non-webkit browsers */
-  // zoom: 80%; /* Webkit browsers */
-}
-
-.container-last {
-  width: 100%;
-  height: 98vh;
-}
-
-.main-picture {
-  height: 100%;
-  width: 100%;
-  display: block;
-  margin: auto;
-  object-fit: cover;
-  //object-fit: scale-down;
-  object-position: center bottom;
-}
-
-.expand-more {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  z-index: 25;
-  cursor: pointer;
-}
-
-.expand-less {
-  position: absolute;
-  top: 125px;
-  right: 10px;
-  z-index: 25;
-  cursor: pointer;
+  @media (min-width: "500px") {
+    display: block;
+    background: center / cover no-repeat url("./accets/background.png");
+    //height: 100vh;
+  }
 }
