--- a/src/styles/font-family.scss
+++ b/src/styles/font-family.scss
@@ -1,31 +1,6 @@
 @font-face {
-  font-family: 'PWD';
-  // src:  url(../fonts/KGSecondChancesSketch.ttf) format('truetype');
+  font-family: 'SchistRegular';
   src:  url(../fonts/Schist_font/SchistRegular.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-@font-face {
-  font-family: 'PWDolphins';
-  src:  url(../fonts/pwdolphins/PWDolphins.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-@font-face {
-  font-family: 'Rayando';
-  src:  url(../fonts/rayando-font/Rayando-xj18.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-@font-face {
-  font-family: 'PencilpeteFont';
-  src:  url(../fonts/pencilpete-font/PencilpeteFont-2eE3.ttf) format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -37,19 +12,4 @@
   font-weight: normal;
   font-style: normal;
   font-display: block;
-}
-
-@font-face {
-  font-family: 'Pwchalk';
-  src:  url(../fonts/pwchalk.medium.ttf) format('truetype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-@font-face {
-  font-family: "MainFont";
-  src: url(../fonts/fonts.ttf) format("truetype");
-  font-style: italic;
-  font-weight: bold;
 }
