--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,9 +2,8 @@
 
 $base__font-size: 18px;
 $base__font-family: 'ColoredCrayons' !important;
-$title__font-family: 'PWD' !important;
+$title__font-family: 'SchistRegular' !important;
 
-// $base__color: #c1314a;
 $base__color: #b31c35;
 $second__color: #d8cccc;
 $courses__fonts__color: #d45a6e;
