--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -10,11 +10,50 @@
   }
 }
 
-.flag {
+.nav-bar {
+  position: relative;
+  top: 100px;
+  width: 100px;
+  height: 192px;
+  //border: 1px solid wheat;
+  z-index: 50;
+}
+
+.link-item {
   position: absolute;
-  top: 68px;
-  right: -40px;
-  border: 33px solid $courses__fonts__color;
-  border-bottom: 20px solid transparent;
-  z-index: 20;
+  font-family: $title__font-family;
+  font-size: 18px;
+  color: $base__color;
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
+}
+
+.link-item-skills {
+  position: absolute;
+  top: 10px;
+}
+
+.link-item-courses {
+  position: absolute;
+  top: 50px;
+  z-index: 50;
+}
+
+.link-item-interests {
+  position: absolute;
+  top: 100px;
+  z-index: 50;
+}
+
+.link-item-contacts {
+  position: absolute;
+  top: 150px;
+  z-index: 50;
+}
+
+.active {
+  color: $second__color;
+  //border: 1px solid $second__color;
+  background-color: rgba($color: rgb(75, 74, 74), $alpha: .3);
 }
